chore: update solution

--- a/python/viterbi_pandas.ipynb
+++ b/python/viterbi_pandas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
        "dizzy      NaN   NaN"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 158,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +171,7 @@
        "dizzy      NaN   NaN"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 159,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,13 +189,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "p [0.084, 0.006400000000000002]\n",
+      "p [0.027, 0.007200000000000001]\n",
+      "p [0.00588, 0.00108]\n",
+      "p [0.01512, 0.00972]\n",
       "        healthy    fever\n",
       "normal      0.3     0.04\n",
       "cold      0.084    0.027\n",
@@ -254,7 +258,7 @@
        "dizzy   healthy  healthy"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 160,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,6 +272,7 @@
     "    for j in states:\n",
     "        p = [t1[k][i - 1] * tran_prob[k][j] * emit_prob[j][obs[i]] \n",
     "             for k in states]\n",
+    "        print('p', p)\n",
     "        t1[j][i] = max(p)\n",
     "        if max(p) > prev_max:\n",
     "            prev_max = max(p)\n",
@@ -279,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +293,7 @@
        "(array([0., 0., 0.]), ['', '', ''])"
       ]
      },
-     "execution_count": 164,
+     "execution_count": 161,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +315,7 @@
        "(array([0., 0., 1.]), ['', '', 'fever'])"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 162,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +339,7 @@
        "(array([0., 0., 1.]), ['healthy', 'healthy', 'fever'])"
       ]
      },
-     "execution_count": 167,
+     "execution_count": 163,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -349,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,83 +362,6 @@
     "# def viterbi(obs, states, init_prob, tran_prob, emit_prob):\n",
     "\n",
     "# viterbi(obs, states, init_prob, tran_prob, emit_prob)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# A simplified version, using just array\n",
-    "states = np.array([0, 1])\n",
-    "tran_prob = np.array([[0.7, 0.3], [0.4, 0.6]])\n",
-    "emit_prob = np.array([[0.5, 0.4, 0.1], [0.1, 0.3, 0.6]])\n",
-    "init_prob = np.array([0.6, 0.4])\n",
-    "obs = np.array([0, 1, 2])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(array([[0., 0., 0.],\n",
-       "        [0., 0., 0.]]), array([[0., 0., 0.],\n",
-       "        [0., 0., 0.]]))"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "t1 = np.zeros((len(states), len(obs)))\n",
-    "t2 = np.zeros((len(states), len(obs)))\n",
-    "t1, t2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hello\n",
-      "hello\n",
-      "hello\n",
-      "hello\n",
-      "hello\n",
-      "hello\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([[0.3 , 0.  , 0.  ],\n",
-       "       [0.04, 0.  , 0.  ]])"
-      ]
-     },
-     "execution_count": 57,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "for t in obs:\n",
-    "    for s in states:\n",
-    "        if i == 0:\n",
-    "            t1[s, 0] = init_prob[s] * emit_prob[s, obs[0]]\n",
-    "            t2[s, 0] = 0\n",
-    "\n",
-    "t1        "
    ]
   }
  ],
